.antlr/SpecscriptGrammarParser.ts
// Generated from SpecscriptGrammar.g4 by ANTLR 4.13.1

import * as antlr from "antlr4ng";
import { Token } from "antlr4ng";

import { SpecscriptGrammarListener } from "./SpecscriptGrammarListener.js";
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;


export class SpecscriptGrammarParser extends antlr.Parser {
    public static readonly T__0 = 1;
    public static readonly T__1 = 2;
    public static readonly T__2 = 3;
    public static readonly T__3 = 4;
    public static readonly T__4 = 5;
    public static readonly T__5 = 6;
    public static readonly T__6 = 7;
    public static readonly T__7 = 8;
    public static readonly T__8 = 9;
    public static readonly T__9 = 10;
    public static readonly T__10 = 11;
    public static readonly T__11 = 12;
    public static readonly T__12 = 13;
    public static readonly T__13 = 14;
    public static readonly T__14 = 15;
    public static readonly T__15 = 16;
    public static readonly T__16 = 17;
    public static readonly T__17 = 18;
    public static readonly T__18 = 19;
    public static readonly T__19 = 20;
    public static readonly NUMERO = 21;
    public static readonly NUEVALINEA = 22;
    public static readonly PALABRA = 23;
    public static readonly ESPACIO = 24;
    public static readonly CADENA = 25;
    public static readonly CELDA = 26;
    public static readonly FILATABLA = 27;
    public static readonly RULE_prog = 0;
    public static readonly RULE_escenario = 1;
    public static readonly RULE_esquemaEscenario = 2;
    public static readonly RULE_caracteristica = 3;
    public static readonly RULE_nombreCaracteristica = 4;
    public static readonly RULE_antecedentes = 5;
    public static readonly RULE_escEsp = 6;
    public static readonly RULE_esqEscEsp = 7;
    public static readonly RULE_desCaracteristica = 8;
    public static readonly RULE_desAntecedente = 9;
    public static readonly RULE_desEscenario = 10;
    public static readonly RULE_desEsqEscenario = 11;
    public static readonly RULE_desEspecificacion = 12;
    public static readonly RULE_desEsqEspecificacion = 13;
    public static readonly RULE_tablaEncabezado = 14;
    public static readonly RULE_encabezado = 15;
    public static readonly RULE_lista = 16;
    public static readonly RULE_clavevalor = 17;
    public static readonly RULE_clave = 18;
    public static readonly RULE_valor = 19;
    public static readonly RULE_operacion = 20;
    public static readonly RULE_nombreModulo = 21;
    public static readonly RULE_datos = 22;

    public static readonly literalNames = [
        null, "'Ejemplo'", "'Escenario'", "':'", "'Esquema del escenario:'", 
        "'Ejemplos:'", "'Caracteristica'", "'Requisito de Negocio'", "'Requisito'", 
        "'Antecedentes:'", "'*'", "'Dado'", "'Dada'", "'Dados'", "'Dadas'", 
        "'Cuando'", "'Entonces'", "'Y'", "'E'", "'Pero'", "'|'"
    ];

    public static readonly symbolicNames = [
        null, null, null, null, null, null, null, null, null, null, null, 
        null, null, null, null, null, null, null, null, null, null, "NUMERO", 
        "NUEVALINEA", "PALABRA", "ESPACIO", "CADENA", "CELDA", "FILATABLA"
    ];
    public static readonly ruleNames = [
        "prog", "escenario", "esquemaEscenario", "caracteristica", "nombreCaracteristica", 
        "antecedentes", "escEsp", "esqEscEsp", "desCaracteristica", "desAntecedente", 
        "desEscenario", "desEsqEscenario", "desEspecificacion", "desEsqEspecificacion", 
        "tablaEncabezado", "encabezado", "lista", "clavevalor", "clave", 
        "valor", "operacion", "nombreModulo", "datos",
    ];

    public get grammarFileName(): string { return "SpecscriptGrammar.g4"; }
    public get literalNames(): (string | null)[] { return SpecscriptGrammarParser.literalNames; }
    public get symbolicNames(): (string | null)[] { return SpecscriptGrammarParser.symbolicNames; }
    public get ruleNames(): string[] { return SpecscriptGrammarParser.ruleNames; }
    public get serializedATN(): number[] { return SpecscriptGrammarParser._serializedATN; }

    protected createFailedPredicateException(predicate?: string, message?: string): antlr.FailedPredicateException {
        return new antlr.FailedPredicateException(this, predicate, message);
    }

    public constructor(input: antlr.TokenStream) {
        super(input);
        this.interpreter = new antlr.ParserATNSimulator(this, SpecscriptGrammarParser._ATN, SpecscriptGrammarParser.decisionsToDFA, new antlr.PredictionContextCache());
    }
    public prog(): ProgContext {
        let localContext = new ProgContext(this.context, this.state);
        this.enterRule(localContext, 0, SpecscriptGrammarParser.RULE_prog);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 46;
            this.caracteristica();
            this.state = 48;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            if (_la === 9) {
                {
                this.state = 47;
                this.antecedentes();
                }
            }

            this.state = 54;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 22) !== 0)) {
                {
                this.state = 52;
                this.errorHandler.sync(this);
                switch (this.tokenStream.LA(1)) {
                case SpecscriptGrammarParser.T__0:
                case SpecscriptGrammarParser.T__1:
                    {
                    this.state = 50;
                    this.escenario();
                    }
                    break;
                case SpecscriptGrammarParser.T__3:
                    {
                    this.state = 51;
                    this.esquemaEscenario();
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                }
                this.state = 56;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            this.state = 57;
            this.match(SpecscriptGrammarParser.EOF);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public escenario(): EscenarioContext {
        let localContext = new EscenarioContext(this.context, this.state);
        this.enterRule(localContext, 2, SpecscriptGrammarParser.RULE_escenario);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 59;
            _la = this.tokenStream.LA(1);
            if(!(_la === 1 || _la === 2)) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 60;
            this.match(SpecscriptGrammarParser.T__2);
            this.state = 62;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 61;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 64;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 3, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 66;
            this.desEscenario();
            this.state = 68;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 67;
                this.match(SpecscriptGrammarParser.NUEVALINEA);
                }
                }
                this.state = 70;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 22);
            this.state = 73;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 72;
                this.escEsp();
                }
                }
                this.state = 75;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1047552) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public esquemaEscenario(): EsquemaEscenarioContext {
        let localContext = new EsquemaEscenarioContext(this.context, this.state);
        this.enterRule(localContext, 4, SpecscriptGrammarParser.RULE_esquemaEscenario);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 77;
            this.match(SpecscriptGrammarParser.T__3);
            this.state = 79;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 78;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 81;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 6, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 83;
            this.desEsqEscenario();
            this.state = 85;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 84;
                this.match(SpecscriptGrammarParser.NUEVALINEA);
                }
                }
                this.state = 87;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 22);
            this.state = 90;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 89;
                this.esqEscEsp();
                }
                }
                this.state = 92;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 1047552) !== 0));
            this.state = 95;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 94;
                this.match(SpecscriptGrammarParser.NUEVALINEA);
                }
                }
                this.state = 97;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 22);
            this.state = 99;
            this.match(SpecscriptGrammarParser.T__4);
            this.state = 101;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 100;
                this.match(SpecscriptGrammarParser.NUEVALINEA);
                }
                }
                this.state = 103;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 22);
            this.state = 108;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 11, this.context) ) {
            case 1:
                {
                this.state = 105;
                this.tablaEncabezado();
                }
                break;
            case 2:
                {
                this.state = 106;
                this.lista();
                }
                break;
            case 3:
                {
                this.state = 107;
                this.clavevalor();
                }
                break;
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public caracteristica(): CaracteristicaContext {
        let localContext = new CaracteristicaContext(this.context, this.state);
        this.enterRule(localContext, 6, SpecscriptGrammarParser.RULE_caracteristica);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 110;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 448) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 111;
            this.match(SpecscriptGrammarParser.T__2);
            this.state = 112;
            this.nombreCaracteristica();
            this.state = 119;
            this.errorHandler.sync(this);
            switch (this.interpreter.adaptivePredict(this.tokenStream, 13, this.context) ) {
            case 1:
                {
                this.state = 114;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                do {
                    {
                    {
                    this.state = 113;
                    this.match(SpecscriptGrammarParser.NUEVALINEA);
                    }
                    }
                    this.state = 116;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                } while (_la === 22);
                this.state = 118;
                this.desCaracteristica();
                }
                break;
            }
            this.state = 124;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 22) {
                {
                {
                this.state = 121;
                this.match(SpecscriptGrammarParser.NUEVALINEA);
                }
                }
                this.state = 126;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public nombreCaracteristica(): NombreCaracteristicaContext {
        let localContext = new NombreCaracteristicaContext(this.context, this.state);
        this.enterRule(localContext, 8, SpecscriptGrammarParser.RULE_nombreCaracteristica);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 128;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 127;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 130;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public antecedentes(): AntecedentesContext {
        let localContext = new AntecedentesContext(this.context, this.state);
        this.enterRule(localContext, 10, SpecscriptGrammarParser.RULE_antecedentes);
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 132;
            this.match(SpecscriptGrammarParser.T__8);
            this.state = 134;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 133;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 136;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 16, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 138;
            this.desAntecedente();
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public escEsp(): EscEspContext {
        let localContext = new EscEspContext(this.context, this.state);
        this.enterRule(localContext, 12, SpecscriptGrammarParser.RULE_escEsp);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 140;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1047552) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 142;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 141;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 144;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 17, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 146;
            this.desEspecificacion();
            this.state = 150;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            while (_la === 22) {
                {
                {
                this.state = 147;
                this.match(SpecscriptGrammarParser.NUEVALINEA);
                }
                }
                this.state = 152;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public esqEscEsp(): EsqEscEspContext {
        let localContext = new EsqEscEspContext(this.context, this.state);
        this.enterRule(localContext, 14, SpecscriptGrammarParser.RULE_esqEscEsp);
        let _la: number;
        try {
            let alternative: number;
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 153;
            _la = this.tokenStream.LA(1);
            if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 1047552) !== 0))) {
            this.errorHandler.recoverInline(this);
            }
            else {
                this.errorHandler.reportMatch(this);
                this.consume();
            }
            this.state = 155;
            this.errorHandler.sync(this);
            alternative = 1;
            do {
                switch (alternative) {
                case 1:
                    {
                    {
                    this.state = 154;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    break;
                default:
                    throw new antlr.NoViableAltException(this);
                }
                this.state = 157;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 19, this.context);
            } while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER);
            this.state = 159;
            this.desEsqEspecificacion();
            this.state = 163;
            this.errorHandler.sync(this);
            alternative = this.interpreter.adaptivePredict(this.tokenStream, 20, this.context);
            while (alternative !== 2 && alternative !== antlr.ATN.INVALID_ALT_NUMBER) {
                if (alternative === 1) {
                    {
                    {
                    this.state = 160;
                    this.match(SpecscriptGrammarParser.NUEVALINEA);
                    }
                    }
                }
                this.state = 165;
                this.errorHandler.sync(this);
                alternative = this.interpreter.adaptivePredict(this.tokenStream, 20, this.context);
            }
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public desCaracteristica(): DesCaracteristicaContext {
        let localContext = new DesCaracteristicaContext(this.context, this.state);
        this.enterRule(localContext, 16, SpecscriptGrammarParser.RULE_desCaracteristica);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 167;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 166;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 169;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public desAntecedente(): DesAntecedenteContext {
        let localContext = new DesAntecedenteContext(this.context, this.state);
        this.enterRule(localContext, 18, SpecscriptGrammarParser.RULE_desAntecedente);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 172;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 171;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 174;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public desEscenario(): DesEscenarioContext {
        let localContext = new DesEscenarioContext(this.context, this.state);
        this.enterRule(localContext, 20, SpecscriptGrammarParser.RULE_desEscenario);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 177;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 176;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 179;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public desEsqEscenario(): DesEsqEscenarioContext {
        let localContext = new DesEsqEscenarioContext(this.context, this.state);
        this.enterRule(localContext, 22, SpecscriptGrammarParser.RULE_desEsqEscenario);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 182;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 181;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 184;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public desEspecificacion(): DesEspecificacionContext {
        let localContext = new DesEspecificacionContext(this.context, this.state);
        this.enterRule(localContext, 24, SpecscriptGrammarParser.RULE_desEspecificacion);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 187;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 186;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 189;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public desEsqEspecificacion(): DesEsqEspecificacionContext {
        let localContext = new DesEsqEspecificacionContext(this.context, this.state);
        this.enterRule(localContext, 26, SpecscriptGrammarParser.RULE_desEsqEspecificacion);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 192;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 191;
                _la = this.tokenStream.LA(1);
                if(!((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0))) {
                this.errorHandler.recoverInline(this);
                }
                else {
                    this.errorHandler.reportMatch(this);
                    this.consume();
                }
                }
                }
                this.state = 194;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while ((((_la) & ~0x1F) === 0 && ((1 << _la) & 27262976) !== 0));
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public tablaEncabezado(): TablaEncabezadoContext {
        let localContext = new TablaEncabezadoContext(this.context, this.state);
        this.enterRule(localContext, 28, SpecscriptGrammarParser.RULE_tablaEncabezado);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 196;
            this.encabezado();
            this.state = 198;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 197;
                this.match(SpecscriptGrammarParser.FILATABLA);
                }
                }
                this.state = 200;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 27);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public encabezado(): EncabezadoContext {
        let localContext = new EncabezadoContext(this.context, this.state);
        this.enterRule(localContext, 30, SpecscriptGrammarParser.RULE_encabezado);
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 202;
            this.match(SpecscriptGrammarParser.FILATABLA);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public lista(): ListaContext {
        let localContext = new ListaContext(this.context, this.state);
        this.enterRule(localContext, 32, SpecscriptGrammarParser.RULE_lista);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 217;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 204;
                this.match(SpecscriptGrammarParser.T__19);
                this.state = 208;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 24) {
                    {
                    {
                    this.state = 205;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    this.state = 210;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
                this.state = 211;
                this.match(SpecscriptGrammarParser.CELDA);
                this.state = 213;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                do {
                    {
                    {
                    this.state = 212;
                    this.match(SpecscriptGrammarParser.NUEVALINEA);
                    }
                    }
                    this.state = 215;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                } while (_la === 22);
                }
                }
                this.state = 219;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
            } while (_la === 20);
            }
        }
        catch (re) {
            if (re instanceof antlr.RecognitionException) {
                this.errorHandler.reportError(this, re);
                this.errorHandler.recover(this, re);
            } else {
                throw re;
            }
        }
        finally {
            this.exitRule();
        }
        return localContext;
    }
    public clavevalor(): ClavevalorContext {
        let localContext = new ClavevalorContext(this.context, this.state);
        this.enterRule(localContext, 34, SpecscriptGrammarParser.RULE_clavevalor);
        let _la: number;
        try {
            this.enterOuterAlt(localContext, 1);
            {
            this.state = 235;
            this.errorHandler.sync(this);
            _la = this.tokenStream.LA(1);
            do {
                {
                {
                this.state = 221;
                this.match(SpecscriptGrammarParser.T__19);
                this.state = 225;
                this.errorHandler.sync(this);
                _la = this.tokenStream.LA(1);
                while (_la === 24) {
                    {
                    {
                    this.state = 222;
                    this.match(SpecscriptGrammarParser.ESPACIO);
                    }
                    }
                    this.state = 227;
                    this.errorHandler.sync(this);
                    _la = this.tokenStream.LA(1);
                }
